<resources>
    <!-- global -->
    <string name="app_name" translatable="false">GO</string>
    <string name="btn_proximo">Próximo</string>
    <string name="btn_anterior">Anterior</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>

    <!-- Tela inicial -->
    <string name="ti_titulo">Vamos começar!</string>
    <string name="ti_subtitulo">Faça o login ou cadastro para ter mais acesso a mais informações do seu motorista</string>

    <string name="ti_tenho_conta_titulo">Já tenho conta</string>
    <string name="ti_tenho_conta_subtitulo">Faça login com seu email e senha já cadastrados.</string>

    <string name="ti_quero_cadastrar_titulo">Quero me cadastrar</string>
    <string name="ti_quero_cadastrar_subtitulo">Cadastre-se e faça login para continuar.</string>

    <!-- Cadastro 1 -->
    <string name="ca1_titulo">Cadastre-se</string>
    <string name="ca1_subtitulo">Faça seu cadastro e veja se o seu motorista possui alguma denuncia publicada aqui.</string>
    <string name="ca1_email">Email</string>
    <string name="ca1_email_hint">Insira seu email</string>
    <string name="ca1_senha">Senha</string>
    <string name="ca1_senha_hint">Insira sua senha</string>
    <string name="ca1_confi_senha">Confirmar senha</string>
    <string name="ca1_confi_senha_hint">Confirme sua senha</string>
    <string name="ca1_possui_conta">Já possui conta?</string>
    <string name="ca1_faca_login">Faça login</string>

    <!-- Cadastro 2 -->
    <string name="ca2_titulo">Sobre você</string>
    <string name="ca2_subtitulo">Preencha seus dados para ter uma experiencia personalizada.</string>
    <string name="ca2_nome">Nome</string>
    <string name="ca2_nome_hint">Insira seu nome</string>
    <string name="ca2_data">Data de nascimento</string>
    <string name="ca2_data_hint">dd/mm/aaaa</string>
    <string name="ca2_sexo">Sexo</string>
    <string name="ca2_sexo_feminino">Feminino</string>
    <string name="ca2_sexo_masculino">Masculino</string>
    <string name="ca2_sexo_nenhum">Não Identificar</string>

    <!-- Cadastro 3 -->
    <string name="ca3_titulo">Localização</string>
    <string name="ca3_subtitulo">Agora precisamos da sua localização para filtrarmos as publicações do seu feed.</string>
    <string name="ca3_cep" translatable="false">CEP</string>
    <string name="ca3_cep_hint">Insira seu CEP</string>
    <string name="ca3_estado">Estado</string>
    <string name="ca3_estado_hint">Insira seu estado</string>
    <string name="ca3_cidade">Cidade</string>
    <string name="ca3_cidade_hint">Insira sua cidade</string>

    <!-- Login -->
    <string name="lo_titulo">Faça o Login</string>
    <string name="lo_subtitulo">Preencha seu email e senha e tenha acesso a um feed de denúncias na sua região.</string>
    <string name="lo_erro" translatable="false">Mensagem</string>
    <string name="lo_nao_possui">Não possui conta?</string>
    <string name="lo_registre">Registre-se</string>

    <!-- Termos e condicoes -->
    <string name="tc_titulo">Termos e condições</string>
    <string name="tc_subtitulo">Aqui estão os termos e condições de uso do nosso aplicativo. Ao clicar em "Cadastrar" você está de acordo com os termos aqui escritos.</string>
    <string name="tc_aceite">Declaro que li e aceito os termos e condições de uso.</string>
    <string name="tc_termo">POR FAVOR, LEIA COM ATENÇÃO ESTES TERMOS ANTES DE ACESSAR OU USAR OS SERVIÇOS.
        Ao prosseguir concordo com o processamento dos meus dados pessoais de usuário para ter acesso aos recursos do aplicativo GO. Caso não aceite prosseguir, não poderá utilizar dos recursos providos pelo aplicativo nem outros aplicativos da empresa Connect.
        Autorizo a GO a usar meus dados pessoais (exceto dados de publicações) para poder realizar denúncias apenas de casos que estive envolvido. Tanto como vítima quanto possível culpado.
        Você pode revogar o consentimento ou queira esclarecer alguma dúvida sobre nossa Política de Privacidade ou nossos termos de uso, por favor entre em contato pelo email: connect@gmail.com
    </string>
    <!--Pesquisa-->
    <string name="search_title">Pesquisa</string>
    <string name="search_input">Busque por placa ou cidade</string>

    <!--Notificações-->
    <string name="notification_title">Notificações</string>

    <!-- Nova denúncia -->
    <string-array name="tipos_denuncias">
        <item>Assédio</item>
        <item>Assédio moral</item>
        <item>Racismo</item>
        <item>Agressão física</item>
        <item>Agressão verbal</item>
        <item>Homofobia</item>
        <item>Preconceito</item>
        <item>Furto</item>
    </string-array>
</resources>