<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".TelaTermos">

    <!-- Logo -->
    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_go_1"/>

    </LinearLayout>

    <!-- Termos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:paddingBottom="5sp"
            android:fontFamily="@font/mukta_extrabold"
            android:textColor="@color/title_color"
            android:text="@string/tc_titulo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="@font/mukta_light"
            android:text="@string/tc_subtitulo"/>

    </LinearLayout>

    <!-- Termos -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginVertical="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="@font/mukta_regular"
            android:text="@string/tc_termo"/>

    </ScrollView>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tc_aceite"
        android:fontFamily="@font/mukta_light"
        android:textSize="12dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastrar"
        android:textAllCaps="false"
        android:backgroundTint="@color/text_blue"/>


</LinearLayout>