<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".EditarPerfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_left_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="Editar perfil"
            android:fontFamily="@font/mukta_bold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- Formulário -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Nome"
                    android:fontFamily="@font/mukta_extrabold"
                    android:textSize="15dp" />


                <EditText
                    android:id="@+id/et_nome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/primary_gray"
                    android:fontFamily="@font/mukta_light"
                    android:hint="Insira seu nome"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ca3_cep"
                    android:fontFamily="@font/mukta_extrabold"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/et_cep"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="50dp"
                        android:background="@color/primary_gray"
                        android:fontFamily="@font/mukta_light"
                        android:hint="@string/ca3_cep_hint"
                        android:maxLength="8"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <ImageView
                        android:id="@+id/iv_search"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@color/primary_gray"
                        android:src="@drawable/search"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ca1_email"
                    android:fontFamily="@font/mukta_extrabold"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/primary_gray"
                    android:fontFamily="@font/mukta_light"
                    android:inputType="textEmailAddress"
                    android:hint="@string/ca1_email_hint"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ca1_senha"
                    android:fontFamily="@font/mukta_extrabold"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/et_senha"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="50dp"
                        android:hint="@string/ca1_senha_hint"
                        android:inputType="textPassword"
                        android:fontFamily="@font/mukta_light"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:paddingLeft="10dp"
                        android:background="@color/primary_gray"/>

                    <ImageView
                        android:id="@+id/iv_hide"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@color/primary_gray"
                        android:src="@drawable/hide"/>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ca1_confi_senha"
                    android:fontFamily="@font/mukta_extrabold"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/et_confirmSenha"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/ca1_confi_senha_hint"
                    android:inputType="textPassword"
                    android:fontFamily="@font/mukta_light"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:paddingLeft="10dp"
                    android:background="@color/primary_gray"/>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/btn_salvar"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/text_blue"
                    android:fontFamily="@font/mukta_semibold"
                    android:text="Salvar"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
